# mtriage-viewer

./: .env  .gitignore  README.md  mtriage-server  mtriage-viewer  netlify.toml  package-lock.json  package.json  vue.config.js
mtserver/: app.py  entry.go  getelementmap.go  run.sh  types.go  utils.go
mtserver_py/: app.py
mtviewer/: package-lock.json
mtviewer/src/: App.vue  mutation-types.js  store.js
mtviewer/src/components/: BatchPreview.vue  ElementTable.vue  Elements.vue  ViewBatch.vue
mtviewer/src/cvjson/: Viewer.vue
mtviewer/src/lib/: api.js
public/: index.html
server/: Dockerfile  README.md  app.py  pyproject.toml
src/components/: About.vue  BatchList.vue  BatchPreview.vue  Intro.vue  Landing.vue  ViewBatch.vue
src/cvjson/: FrameMap.vue  Viewer.vue
viewer/: .env  README.md  package-lock.json  package.json
viewer/public/: index.html
viewer/src/: App.vue  main.js  mutation-types.js  store.js
viewer/src/components/: About.vue  BatchList.vue  BatchPreview.vue  Header.vue  Intro.vue  Landing.vue  Loading.vue  ViewBatch.vue
viewer/src/css/: app.css  imports.css  variables.css
viewer/src/cvjson/: FrameMap.vue  Graph.vue  SVGFrameMap.vue  TableRow.vue  VideoCell.vue  Viewer.vue
viewer/src/lib/: api.js  util.js
viewer/src/plugins/: vuetify.js
viewer/src/router/: index.js
viewers/main/: package-lock.json
viewers/main/src/: mutation-types.js  store.js
viewers/main/src/components/: ElementTable.vue  ElementsPreview.vue  ViewBatch.vue
viewers/main/src/cvjson/: Container.vue  Graph.vue  VideoCell.vue
viewers/main/src/lib/: api.js
