[tool.poetry]
name = "mtriage-server"
version = "0.1.0"
description = ""
authors = ["Lachlan Kermode <lk@forensic-architecture.org>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.14"
flask = "^1.1"
flask_cors = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
